# Vedic-Sanskrit-Tutor

./: .envrc  .gitignore  AGENTIC_RAG_QUERY_TYPES.md  AUDIO_PRONUNCIATION_GUIDE.md  BHARATA_DISAMBIGUATION_UPDATE.md  BRANCH_README_GRIFFITH.md  CITATION_CODE_FLOW.md  CITATION_ENHANCEMENT.md  CITATION_FIXED.md  CITATION_FIXES_IMPLEMENTATION.md  CITATION_FIX_SUMMARY.md  CITATION_IMPLEMENTATION_SUMMARY.md  CITATION_ISSUE_RESOLUTION.md  CITATION_SOLUTION_SUMMARY.md  CITATION_SYSTEM_ANALYSIS.md  CITATION_SYSTEM_COMPLETE.md  CITATION_SYSTEM_COMPLETE_EXPLANATION.md  CITATION_SYSTEM_DOCUMENTATION_INDEX.md  CITATION_SYSTEM_EXPLANATION.md  CITATION_VISUAL_WALKTHROUGH.md  CLEANUP_FEATURES.md  CLI_DEBATE_SUMMARY.md  COMPLETE_CONSOLIDATION_ANALYSIS.md  CONVERSATIONAL_WORDS_FIX.md  CONVERSATION_CONTEXT.md  DASAS_QUERY_VERIFICATION.md  DASAS_QUERY_VERIFICATION_COMPLETE.md  DEBATE_CLI_GUIDE.md  DEBATE_CLI_README.md  DEBATE_QUICKREF.md  DEBATE_SYSTEM_EXPLAINED.md  DEBATE_SYSTEM_README.md  DEBATE_USAGE_TIPS.md  DICTIONARY_CLEANING.md  DUAL_TRANSLATION_IMPLEMENTATION.md  EVALUATOR_ANALYSIS.md  FAST_MODELS_GUIDE.md  GRIFFITH_RIGVEDA_PARSING_SUMMARY.md  GROQ_REGENERATION_FEATURE.md  LOCAL_PROCESSING_README.md  (+113 more)
.devcontainer/: devcontainer.json
debates/: debate_RV_10_85_20251230_205256.json  debate_RV_10_85_20251230_223307.json  debate_RV_1_32_1_20251230_210924.json  debate_RV_1_32_20251230_163749.json  debate_RV_1_32_20251230_165127.json  debate_RV_2_33_20251230_200823.json  debate_RV_2_33_20251230_204014.json  debate_RV_2_33_20251230_212131.json  debate_RV_2_33_20251230_213305.json  (+15 more)
(+51 files in other folders)
